k8s/ingress/yaliz-identity-manager/identity-manager-alb-aws-ingress.yaml
# https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/tasks/ssl_redirect/ 
# the ssl-redirect action must be be first rule(which will be evaluated first by ALB) 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identity-manager
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: app=node,tier=backend
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:775108030918:certificate/2f167767-91fe-4794-b6f7-cccc6e1fbc31
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8080}, {"HTTPS": 8443}]'
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/subnets: subnet-0e0b2522292ac20f8,subnet-0957a17b6e8e63294,subnet-040d1fc58359f8151
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  rules:
    - http:
       paths:
         - path: /*
           backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
    - host: identity-manager.cloud.serra.pw
      http:
        paths:
          - path: /*
            backend:
              serviceName: node
              servicePort: 80
          - path: /api/*
            backend:
              serviceName: node
              servicePort: 80
